@@ -31,16 +31,18 @@ JSDOC.opt = Opt.get(
 		n: "nocode",
 		o: "out",
 		s: "suppress",
+		q: "quiet",
 		T: "testmode",
 		h: "help",
 		v: "verbose",
 		"D[]": "define",
+		"E[]": "exclude",
 		"H[]": "handler"
 	}
 );
 
 /** The current version string of this application. */
-JSDOC.VERSION = "2.1.0b";
+JSDOC.VERSION = "2.2.0";
 
 /** Print out usage information and quit. */
 JSDOC.usage = function() {
@@ -50,13 +52,15 @@ JSDOC.usage = function() {
 	print("  -a or --allfunctions\n          Include all functions, even undocumented ones.\n");
 	print("  -c or --conf\n          Load a configuration file.\n");
 	print("  -d=<PATH> or --directory=<PATH>\n          Output to this directory (defaults to \"out\").\n");
-	print("  -D=\"myVar:My value\" or --define=\"myVar:My value\"\n          Multiple. Define a variable, available in JsDoc as JSDOC.opt.D.myVar\n");
+	print("  -D=\"myVar:My value\" or --define=\"myVar:My value\"\n          Multiple. Define a variable, available in JsDoc as JSDOC.opt.D.myVar.\n");
 	print("  -e=<ENCODING> or --encoding=<ENCODING>\n          Use this encoding to read and write files.\n");
+	print("  -E=\"REGEX\" or --exclude=\"REGEX\"\n          Multiple. Exclude files based on the supplied regex.\n");
 	print("  -h or --help\n          Show this message and exit.\n");
 	//print("  -H=ext:handler or --handler=ext:handler\n          Multiple. Load handlers/handler.js to handle files with .ext names.\n");
 	print("  -n or --nocode\n          Ignore all code, only document comments with @name tags.\n");
 	print("  -o=<PATH> or --out=<PATH>\n          Print log messages to a file (defaults to stdout).\n");
 	print("  -p or --private\n          Include symbols tagged as private, underscored and inner symbols.\n");
+	print("  -q or --quiet\n          Do not output any messages, not even warnings.\n");
 	print("  -r=<DEPTH> or --recurse=<DEPTH>\n          Descend into src directories.\n");
 	print("  -s or --suppress\n          Suppress source code output.\n");
 	print("  -t=<PATH> or --template=<PATH>\n          Required. Use this template to format the output.\n");
